worked on mobile bug

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,6 +12,7 @@
     font-weight: 600;
 }
 
+a,
 .link {
     text-decoration: none;
 }
